# Huhb3D-Viewer

./: .dockerignore  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  Sphere.stl  agent_ui.js  agent_ui.py  agent_ui_llm.js  ai_command_descriptions.json  app.py  batch_pipeline.py  build_and_compile.bat  build_project.ps1  compile_render.ps1  dataset_report.py  debug_bat.bat  demo_showcase.html  entrypoint.sh  generate_test_models.py  generator_bridge.py  index.html  license_guard.py  mask_to_coco.py  model_describer.py  non_interactive_test.bat  one_click_run.bat  package.json  requirements.txt  server.js  sim_to_real.py  simple_test.bat  simulate_one_click.bat  start_all.bat  start_demo.bat  step_topology_parser.py  stop_all.bat  (+11 more)
.github/workflows/: build.yml  windows-release.yml
Huhb3D-Synthetic-Data-Generator/: README.md
Huhb3D-Synthetic-Data-Generator/hf-space/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.py  build_static.py  index.html  mask_to_coco.py  requirements.txt  server.py
Huhb3D-Synthetic-Data-Generator/hf-space/demo_data/: camera_poses.json
Huhb3D-Synthetic-Data-Generator/hf-space/src/Algorithm/: AICommandManager.h
Huhb3D-Synthetic-Data-Generator/hf-space/src/agent/: AIAgentController.cpp  AIAgentController.h
Huhb3D-Synthetic-Data-Generator/hf-space/src/benchmark/: benchmark_object_pool.cpp
Huhb3D-Synthetic-Data-Generator/hf-space/src/core/: bvh.cpp  command_dispatcher.h  embodied_ai_agent.h  generate_stl.cpp  hhb_cad_c_api.cpp  hhb_cad_c_api.h  llm_client.cpp  llm_client.h  object_pool.h  performance_test.cpp  simdjson.h  stl_parser.cpp  stl_parser.h  stl_parser_coroutine.cpp  stl_parser_coroutine.h  test_bvh.cpp  test_c_api.cpp  test_robust_predicates.cpp  test_stl_parser.cpp  test_stl_parser_coroutine.cpp  tool_registry.cpp  tool_registry.h
Huhb3D-Synthetic-Data-Generator/hf-space/src/render/: imgui.cpp  render_manager.cpp  render_manager.h
Huhb3D-Synthetic-Data-Generator/hf-space/src/skill/: AnalyzeGeometrySkill.h  RotateSkill.h  SkillRegistry.h  ZoomInSkill.h
Huhb_CAD_Viewer_Demo/: blackWindowPrintContext.txt
demo_data/: gt_6dof.json  manifest.json  scene_camera.json  scene_gt.json
include/: bvh.h  geometry_api.h  highlight_types.h  httplib.h  llm_client.h  object_pool.h  robust_predicates.h  stl_parser_coroutine.h
include/glm/: glm.hpp
include/glm/gtc/: matrix_transform.hpp  type_ptr.hpp
include/nlohmann/: json.hpp
run_1777972769/: label_legend.txt  manifest.json
run_1778000322/: manifest.json
screenshots/: upload_1777970731_view2.ppm  upload_1777972769_view3.ppm  upload_1777991350_view1.ppm  upload_1777991350_view2.ppm  upload_1777991350_view3.ppm
src/Algorithm/: AICommandManager.cpp  GeometryExpert.cpp  GeometryExpert.h
src/agent/: AIAgentController.cpp  AIAgentController.h  DocumentRetriever.cpp  DocumentRetriever.h
src/core/: command_dispatcher.cpp  embodied_ai_agent.cpp  geometry_api.cpp  llm_client.cpp  performance_test.cpp  stl_parser.cpp  stl_parser_coroutine.cpp  test_object_pool.cpp
src/render/: CMakeLists.txt  imgui_impl_glfw.cpp  render_manager.cpp  render_manager.h  test_render.cpp
src/skill/: AutoRotateSkill.h  ISkill.h  MeasureModelSkill.h  OptimizeViewSkill.h  ResetCameraSkill.h
test_models/: Cube.stl
tests/: benchmark_test.cpp
